fix the navbar to be more accessible in terms of contrast

--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -94,6 +94,17 @@ nav a {
     font-size: 1rem;
 }
 
+.navbar-light .navbar-nav .nav-link  {
+    color: rgba(0,0,0,.7) !important;
+}
+
+.navbar-light .navbar-nav .nav-link.active,
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar-light .navbar-nav .nav-link:focus {
+    font-size: 1.05rem;
+    color: black !important;
+}
+
 .shadow-line {
     height: 2px;
     background-color: rgba(0, 0, 0, 0.2);
